[package]
name = "real-time"
description = "Safely share data with a real-time thread."
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-utils = "0.8.19"

[target.'cfg(loom)'.dependencies]
loom = "0.7.1"

[dev-dependencies]
beady = "0.6.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
static_assertions = "1.1.0"

[[bench]]
name = "reader"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
